# airflow-tests

./: pyproject.toml  values.yaml
airflow_tests/: git_sensor_tests.py
custom_image/: Dockerfile
